# research-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  logging_config.py  main.py
src/api/: routes.py  schemas.py  service.py
src/auth/: dependencies.py
src/cache/: redis.py
src/research/: compress.py  depth.py  engine.py  events.py  prompts.py  scrape.py  search.py  tasks.py
src/research/scrape/: __init__.py  firecrawl_loader.py  models.py  reddit_loader.py  registry.py
tests/: conftest.py  test_auth.py  test_cache.py  test_engine.py  test_reddit_loader.py  test_routes.py  test_tasks.py
