[project]
name = "research-service"
version = "0.1.0"
description = "HTTP service for autonomous multi-step web research using GPT Researcher and Firecrawl"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gpt-researcher",
    "redis[hiredis]",
    "pydantic-settings",
    "httpx",
    "sse-starlette",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
